--- a/app/src/main/res/drawable/delete_button_my_list.xml
+++ b/app/src/main/res/drawable/delete_button_my_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/labPrimary"/>
+    <solid android:color="#dd2c00"/>
     <corners android:radius="5dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
