--- a/app/src/main/res/drawable-v24/spinner_background.xml
+++ b/app/src/main/res/drawable-v24/spinner_background.xml
@@ -7,6 +7,8 @@
         <inset android:insetLeft="-1dp" android:insetRight="-1dp">
             <shape android:shape="rectangle">
                 <solid android:color="@color/labThird" />
+                <corners android:radius="5dp"/>
+                <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" />
             </shape>
         </inset>
     </item>
