--- a/app/src/main/res/layout/main_list.xml
+++ b/app/src/main/res/layout/main_list.xml
@@ -1,126 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main_list_relout">
+    android:id="@+id/main_list_relout"
+    android:background="@color/labThird"
+    android:elevation="10dp"
+    android:padding="2dp"
+    >
 
-
-    <TextView
-        android:id="@+id/main_value"
-        android:layout_width="110dp"
-        android:layout_height="79dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/main_value_name"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/main"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/main_value"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/main_value"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:text="TextView"
+            android:textColor="@color/mainLabValueMainList"
+            android:autoSizeTextType="uniform"
+        android:textSize="66sp"
+            android:textStyle="bold"
+            app:fontFamily="cursive" />
+
+        <TextView
+            android:id="@+id/main_value_name"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_below="@+id/main_value"
+            android:autoSizeTextType="uniform"
         android:layout_marginTop="3dp"
-        android:text="TextView" />
+            android:text="TextView"
+            android:textColor="#37474F"
+            android:textSize="24sp"
+            app:fontFamily="sans-serif-smallcaps" />
 
-    <TextView
-        android:id="@+id/main_value_updown"
-        android:layout_width="23dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginLeft="22dp"
-        android:layout_marginTop="82dp"
-        android:layout_toEndOf="@+id/main_value_name"
-        android:layout_toRightOf="@+id/main_value_name"
-        android:text="T" />
+        <TextView
+            android:id="@+id/main_value_updown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/main_value_name"
+            android:layout_toRightOf="@+id/main_value_name"
+            android:text="T" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/date_text"
-        android:layout_width="122dp"
-        android:layout_height="59dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="9dp"
-        android:layout_marginRight="9dp" />
+        android:padding="3dp"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:fontFamily="sans-serif-smallcaps" />
 
     <TextView
         android:id="@+id/day_text"
-        android:layout_width="116dp"
-        android:layout_height="35dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/date_text"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginRight="11dp"
-        android:text="TextView" />
-
-    <TextView
+        android:padding="3dp"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:fontFamily="sans-serif-smallcaps" />
+    <RelativeLayout
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/main"
+        android:layout_toRightOf="@+id/main"
+        android:padding="2dp"
+        >
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:id="@+id/second_value_main"
+            android:paddingBottom="1dp">
+            <TextView
         android:id="@+id/second_value"
-        android:layout_width="76dp"
-        android:layout_height="36dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="9dp"
-        android:layout_marginLeft="9dp"
-        android:layout_marginTop="8dp"
-        android:layout_toEndOf="@+id/main_value"
-        android:layout_toRightOf="@+id/main_value"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/second_value_text"
-        android:layout_width="35dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="7dp"
-        android:layout_toEndOf="@+id/second_value"
-        android:layout_toRightOf="@+id/second_value"
-        android:text="TextView" />
+        android:text="TextView"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
+        android:textColor="#FFFFFF"
+        android:textSize="38sp"
+        android:textStyle="bold"
+        app:fontFamily="serif" />
 
-    <TextView
+            <TextView
+                android:id="@+id/second_value_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="0dp"
+                android:layout_toEndOf="@+id/second_value"
+                android:layout_toRightOf="@+id/second_value"
+
+                android:autoSizeTextType="uniform"
+                android:text="TextView"
+                android:textColor="#37474F"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:fontFamily="sans-serif-smallcaps" />
+
+            <TextView
         android:id="@+id/second_value_updown"
-        android:layout_width="21dp"
-        android:layout_height="38dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="7dp"
+
         android:layout_toEndOf="@+id/second_value_text"
         android:layout_toRightOf="@+id/second_value_text"
         android:text="T" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_below="@+id/second_value_main"
+            android:paddingTop="1dp">
+            <TextView
+                android:id="@+id/third_value"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:autoSizeTextType="uniform"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="38sp"
+                android:textStyle="bold"
+                app:fontFamily="serif" />
 
-    <TextView
-        android:id="@+id/third_value"
-        android:layout_width="75dp"
-        android:layout_height="42dp"
-        android:layout_below="@+id/second_value"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="17dp"
-        android:layout_toEndOf="@+id/main_value"
-        android:layout_toRightOf="@+id/main_value"
-        android:text="TextView" />
+            <TextView
+                android:id="@+id/third_value_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="0dp"
+                android:layout_toEndOf="@+id/third_value"
+                android:layout_toRightOf="@+id/third_value"
+                android:autoSizeTextType="uniform"
+                android:text="TextView"
+                android:textColor="#37474F"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:fontFamily="sans-serif-smallcaps" />
 
-    <TextView
-        android:id="@+id/third_value_text"
-        android:layout_width="37dp"
-        android:layout_height="44dp"
-        android:layout_below="@+id/second_value_text"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="17dp"
-        android:layout_toEndOf="@+id/third_value"
-        android:layout_toRightOf="@+id/third_value"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/third_value_updown"
-        android:layout_width="18dp"
-        android:layout_height="36dp"
-        android:layout_below="@+id/second_value_updown"
-        android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="19dp"
-        android:layout_toEndOf="@+id/third_value_text"
-        android:layout_toRightOf="@+id/third_value_text"
-        android:text="T" />
+            <TextView
+                    android:id="@+id/third_value_updown"
+                    android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/third_value_text"
+                    android:layout_toRightOf="@+id/third_value_text"
+                    android:text="T" />
+        </RelativeLayout>
+    </RelativeLayout>
 </RelativeLayout>
