--- a/app/src/main/res/layout/my_list.xml
+++ b/app/src/main/res/layout/my_list.xml
@@ -7,8 +7,9 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="10dp"
-    android:background="@color/labSecondary"
+    android:elevation="15dp"
+    android:background="@color/labThird"
+    android:padding="2dp"
     >
 
     <TextView
@@ -19,7 +20,7 @@
         android:layout_column="0"
         android:text="TextView"
         android:textSize="18sp"
-        android:textColor="#ffffff"/>
+        android:textColor="@color/labText"/>
 
     <TextView
         android:id="@+id/lab_rhs"
@@ -30,7 +31,7 @@
         android:layout_marginLeft="0dp"
         android:text="TextView"
         android:textSize="18sp"
-        android:textColor="#ffffff"/>
+        android:textColor="@color/labText"/>
 
     <Button
         android:id="@+id/delete_button_listview"
