--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="textColorPrimary">#000000</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="labPrimary">#E64A19</color>
-    <color name="labSecondary">#ff5722</color>
-    <color name="labThird">#ff7043</color>
+    <color name="labSecondary">#ffccbc</color>
+    <color name="labThird">#ff8a65</color>
+    <color name="labTextHeading">#37474f</color>
+    <color name="labText">#212121</color>
+    <color name="mainLabValueMainList">#ffffff</color>
 </resources>
