--- a/app/src/main/res/layout/main_list.xml
+++ b/app/src/main/res/layout/main_list.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="20dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main_list_relout"
     android:background="@color/labThird"
-    android:elevation="10dp"
+    android:elevation="20dp"
     android:padding="2dp"
     >
+
 
     <RelativeLayout
         android:id="@+id/main"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:padding="3dp"
+        >
 
         <TextView
             android:id="@+id/main_value"
             android:layout_width="wrap_content"
-            android:layout_height="80dp"
+            android:layout_height="75dp"
             android:text="TextView"
             android:textColor="@color/mainLabValueMainList"
             android:autoSizeTextType="uniform"
@@ -29,7 +36,7 @@
         <TextView
             android:id="@+id/main_value_name"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="25dp"
             android:layout_below="@+id/main_value"
             android:autoSizeTextType="uniform"
         android:layout_marginTop="3dp"
@@ -47,6 +54,13 @@
             android:layout_toRightOf="@+id/main_value_name"
             android:text="T" />
     </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/second_layout"
+        android:layout_toEndOf="@+id/second_layout"
+        android:padding="3dp"
+        >
 
     <TextView
         android:id="@+id/date_text"
@@ -54,10 +68,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:padding="3dp"
+        android:layout_marginTop="15dp"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
-        app:fontFamily="sans-serif-smallcaps" />
+        app:fontFamily="sans-serif-condensed-medium" />
 
     <TextView
         android:id="@+id/day_text"
@@ -66,20 +80,22 @@
         android:layout_below="@+id/date_text"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:padding="3dp"
+        android:layout_marginTop="10dp"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
-        app:fontFamily="sans-serif-smallcaps" />
+        app:fontFamily="sans-serif-condensed-medium" />
+    </RelativeLayout>
     <RelativeLayout
-        android:layout_width="135dp"
+        android:layout_width="145dp"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/main"
         android:layout_toRightOf="@+id/main"
+       android:id="@+id/second_layout"
         android:padding="2dp"
         >
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="55dp"
+            android:layout_height="50dp"
             android:id="@+id/second_value_main"
             android:paddingBottom="1dp">
             <TextView
@@ -124,7 +140,7 @@
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="55dp"
+            android:layout_height="50dp"
             android:layout_below="@+id/second_value_main"
             android:paddingTop="1dp">
             <TextView
@@ -165,3 +181,4 @@
         </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
+</androidx.cardview.widget.CardView>
