--- a/app/src/main/res/layout/medication_list.xml
+++ b/app/src/main/res/layout/medication_list.xml
@@ -1,54 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:id="@+id/medicationListLayout">
+    android:id="@+id/medicationListLayout"
+    android:background="@color/medicationThird"
+    android:elevation="20dp"
+    android:padding="2dp"
+    >
 
     <TextView
         android:id="@+id/tablet_name_text"
-        android:layout_width="170dp"
-        android:layout_height="100dp"
-        android:text="TextView" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:fontFamily="cursive" />
 
     <TextView
         android:id="@+id/time1_text"
-        android:layout_width="70dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_toEndOf="@+id/tablet_name_text"
-        android:layout_toRightOf="@+id/tablet_name_text"
-        android:text="TextView" />
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+android:layout_marginLeft="30dp"
+        android:layout_below="@+id/tablet_name_text"
+        android:layout_marginTop="10dp"
+        android:text="TextView"
+        android:textColor="#37474F"
+        android:textSize="22sp"
+        app:fontFamily="sans-serif-smallcaps"
+        />
 
     <TextView
         android:id="@+id/time2_text"
-        android:layout_width="70dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/tablet_name_text"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/time1_text"
         android:layout_toRightOf="@+id/time1_text"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="#37474F"
+        android:textSize="22sp"
+        app:fontFamily="sans-serif-smallcaps"/>
 
     <TextView
         android:id="@+id/time3_text"
-        android:layout_width="70dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/tablet_name_text"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/time2_text"
         android:layout_toRightOf="@+id/time2_text"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="#37474F"
+        android:textSize="22sp"
+        app:fontFamily="sans-serif-smallcaps" />
 
-    <TextView
-        android:id="@+id/tablet_remaining_text"
-        android:layout_width="210dp"
-        android:layout_height="35dp"
-        android:layout_below="@+id/time1_text"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
+    <Button
+        android:id="@+id/delete_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="10dp"
-        android:layout_toEndOf="@+id/tablet_name_text"
-        android:layout_toRightOf="@+id/tablet_name_text"
-        android:text="TextView" />
+        android:layout_margin="10dp"
+        android:background="@drawable/delete_button_medication_list"
+        android:drawableTop="@drawable/delete24" />
+
+
 </RelativeLayout>
