--- a/app/src/main/res/layout/time_setfor_medication.xml
+++ b/app/src/main/res/layout/time_setfor_medication.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="match_parent"
-    android:layout_height="350dp">
+    android:layout_width="match_parent"
+    android:layout_height="350dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:elevation="10dp"
+    android:dividerHeight="5.0sp">
+    >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="0"
         android:id="@+id/number_of_times"
-    />
+        android:textColor="@color/medicationText"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:fontFamily="sans-serif-condensed"
+        android:padding="3dp"
+        />
+
 
     <TimePicker
         android:id="@+id/timepicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:scaleY="0.95"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_row="0"
+        android:layout_column="1"
+        android:layout_gravity="center"
+        android:layout_marginLeft="0dp"
+        android:background="@drawable/rounded_corner_timepicker"
+        android:elevation="10dp"
         android:scaleX="0.95"
-        android:timePickerMode="spinner"/>
+        android:scaleY="0.95"
+        android:timePickerMode="spinner" />
 </GridLayout>
