--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,5 +11,10 @@
         <item name="colorControlNormal">@color/labThird</item>
         <item name="colorControlActivated">@color/labThird</item>
     </style>
+    <style name="MyEditTextMedication" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/medicationText</item>
+        <item name="colorControlActivated">@color/medicationText</item>
+    </style>
+
 
 </resources>
